# agent-skills

./: .gitignore  AGENTS.md  README.md  biome.json  package.json  ruff.toml  skills.sh.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: create-seed-skill  teams-anthropic-integration  ydc-ai-sdk-integration  ydc-api-integration  ydc-claude-agent-sdk-integration  ydc-crewai-mcp-integration  ydc-langchain-integration  ydc-langchain-python-integration  ydc-openai-agent-sdk-integration  youdotcom-cli
.codex-plugin/: plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/plugin/: marketplace.json
.github/workflows/: _publish.yml  ci.yml  droid-review.yml  droid.yml  eval-skills.yml  external-code-review.yml  publish-teams-anthropic-integration.yml  publish-ydc-ai-sdk-integration.yml  publish-ydc-claude-agent-sdk-integration.yml  publish-ydc-openai-agent-sdk-integration.yml  publish-youdotcom-cli.yml  publish.yml  release-plugin.yml  release.yml  semgrep-ci.yml  validate-skills.yml
.kimi-plugin/: plugin.json
.plugin/: plugin.json
data/: RESULTS.md
data/prompts/: prompts.jsonl
scripts/: copy-openclaw.ts  generate-ydc-schemas.ts  grader.ts  run.ts  semver-release.ts
tests/: validate-skills.spec.ts
tests/ydc-crewai-mcp-integration/: PROMPTS.md  integration_test.py  prompts.jsonl  pyproject.toml
tests/ydc-crewai-mcp-integration/python/: integration_test.py  pyproject.toml
tests/ydc-openai-agent-sdk-integration-python/: PROMPTS.md  integration_test.py  prompts.jsonl  pyproject.toml
(+134 files in other folders)
