[project]
name = "test-crewai-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.1.0",
    "mcp>=0.1.0",
    "pytest>=8.0.0",
    "crewai-tools[mcp]>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
