[project]
name = "test-openai-agent-sdk"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
